Add icons and html for header/footer

--- a/index.html
+++ b/index.html
@@ -2,9 +2,51 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Cody Malcolm's Odin Dashboard Clone</title>
+    <script src="https://kit.fontawesome.com/acebcbab7a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="header">
+      <div class="logo">
+        <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
+        <span class="logo-text">The Odin Project</span>
+      </div>
+      <div class="menu">
+        <a href="#" class="menu-link">My Path</a>
+        <a href="#" class="menu-link">All Paths</a>
+        <a href="#" class="menu-link">Community <i class="fas fa-sort-down"></i></a>
+        <span>|</span>
+        <img class="sm-img" src="images/odin-logo.svg" alt="odin-logo">
+      </div>
+    </div>
+    <div class="main">
 
+    </div>
+    <div class="footer">
+      <div class="footer-logo">
+        <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
+        <span class="logo-text">The Odin Project</span>
+      </div>
+      <div class="social-media">
+        <a class="sm-link" href="#">
+          <i class="fab fa-github"></i>
+        </a>
+        <a class="sm-link" href="#">
+          <i class="fab fa-discord"></i>
+        </a>
+        <a class="sm-link" href="#">
+          <i class="fab fa-facebook-square"></i>
+        </a>
+        <a class="sm-link" href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+      <div class="links">
+
+      </div>
+    </div>
+    <i class="fas fa-comments"></i>
   </body>
 </html>
