Quick draft of main div

--- a/index.html
+++ b/index.html
@@ -17,12 +17,34 @@
         <a href="#" class="menu-link">My Path</a>
         <a href="#" class="menu-link">All Paths</a>
         <a href="#" class="menu-link">Community <i class="fas fa-sort-down"></i></a>
-        <span>|</span>
-        <img class="sm-img" src="images/odin-logo.svg" alt="odin-logo">
+        <span class="menu-divider">|</span>
+        <img class="sm-img menu-img" src="images/odin-logo.svg" alt="odin-logo">
       </div>
     </div>
     <div class="main">
-
+      <div class="">
+        <h1>My Dashboard</h1>
+        <img class="lrg-img menu-img" src="images/odin-logo.svg" alt="odin-logo">
+        <p>cody-malcolm</p>
+        <p>Learn all the stuff!</p>
+      </div>
+      <div class="">
+        <h2>Skills Progress</h2>
+        <p>If you're new to web development, take the following courses in order.</p>
+        <p>Otherwise feel free to start wherever interests you the most.</p>
+        <h3>Foundations</h3>
+        <h4>32 lessons</h4>
+        <button type="button" name="Resume"></button>
+      </div>
+      <div class="">
+        <h2>Project Submissions</h2>
+        <p>No submissions yet</p>
+      </div>
+      <div class="">
+        <h6>Have a question?</h6>
+        <p>Chat with our friendly Odin community in our Discord chatrooms!</p>
+        <button type="button" name="Open Discord"></button>
+      </div>
     </div>
     <div class="footer">
       <div class="footer-logo">
@@ -31,20 +53,25 @@
       </div>
       <div class="social-media">
         <a class="sm-link" href="#">
-          <i class="fab fa-github"></i>
+          <i class="fab fa-github orange600"></i>
         </a>
         <a class="sm-link" href="#">
-          <i class="fab fa-discord"></i>
+          <i class="fab fa-discord orange600"></i>
         </a>
         <a class="sm-link" href="#">
-          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-facebook-square orange600"></i>
         </a>
         <a class="sm-link" href="#">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-twitter orange600"></i>
         </a>
       </div>
       <div class="links">
-
+        <a class="footer-link" href="#">About</a>
+        <a class="footer-link" href="#">FAQ</a>
+        <a class="footer-link" href="#">Blog</a>
+        <a class="footer-link" href="#">Success Stories</a>
+        <a class="footer-link" href="#">Contribute</a>
+        <a class="footer-link" href="#">Terms of Use</a>
       </div>
     </div>
     <i class="fas fa-comments"></i>
