Updates for sizing and color of all text

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       </div>
     </div>
     <div class="main">
-      <div class="">
+      <div class="dashboard-container">
         <h1>My Dashboard</h1>
         <img class="lrg-img menu-img" src="images/odin-logo.svg" alt="odin-logo">
-        <p>cody-malcolm</p>
+        <p class="bold-text dashboard-username">cody-malcolm</p>
         <p>Learn all the stuff!</p>
       </div>
       <div class="">
         <h2>Skills Progress</h2>
-        <p>If you're new to web development, take the following courses in order.</p>
-        <p>Otherwise feel free to start wherever interests you the most.</p>
+        <p>If you're new to web development, take the following courses in order.
+        Otherwise feel free to start wherever interests you the most.</p>
         <h3>Foundations</h3>
         <h4>32 lessons</h4>
         <button type="button" name="Resume"></button>
