All remaining styling except chat button and progress bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Otherwise feel free to start wherever interests you the most.</p>
         <h3>Foundations</h3>
         <h4>32 lessons</h4>
-        <button type="button" name="Resume"></button>
+        <button type="button" name="Resume" id="continue-button">Resume</button>
       </div>
       <div class="">
         <h2>Project Submissions</h2>
@@ -43,7 +43,7 @@
       <div class="">
         <h6>Have a question?</h6>
         <p>Chat with our friendly Odin community in our Discord chatrooms!</p>
-        <button type="button" name="Open Discord"></button>
+        <button type="button" name="Open Discord" id="discord-button">Open Discord</button>
       </div>
     </div>
     <div class="footer">
