Add progress tracker and comments bubble

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="comments-icon">
+      <i class="fas fa-comments"></i>
+    </div>
     <div class="header">
       <div class="logo">
         <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
@@ -28,10 +31,14 @@
         <p class="bold-text dashboard-username">cody-malcolm</p>
         <p>Learn all the stuff!</p>
       </div>
-      <div class="">
+      <div class="progress-container">
         <h2>Skills Progress</h2>
         <p>If you're new to web development, take the following courses in order.
         Otherwise feel free to start wherever interests you the most.</p>
+        <div class="progress-icon">
+          <h4 class="completion-indicator">50% complete</h4>
+          <img class="foundations-logo" src="images/foundations-logo.svg" alt="foundations-logo">
+        </div>
         <h3>Foundations</h3>
         <h4>32 lessons</h4>
         <button type="button" name="Resume" id="continue-button">Resume</button>
@@ -74,6 +81,5 @@
         <a class="footer-link" href="#">Terms of Use</a>
       </div>
     </div>
-    <i class="fas fa-comments"></i>
   </body>
 </html>
