--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <div class="comments-icon">
       <i class="fas fa-comments"></i>
     </div>
+    <div class="users-container popout">
+      <i class="fas fa-users"></i>
+    </div>
+    <div class="comment-container popout">
+      <i class="fas fa-comment"></i>
+    </div>
     <div class="header">
       <div class="logo">
         <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
