Set up media query trick

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
         <span class="logo-text">The Odin Project</span>
       </div>
+      <div class="header-spacer">
+
+      </div>
       <div class="menu">
         <a href="#" class="menu-link">My Path</a>
         <a href="#" class="menu-link">All Paths</a>
@@ -33,21 +36,25 @@
     <div class="main">
       <div class="dashboard-container">
         <h1>My Dashboard</h1>
-        <img class="lrg-img menu-img" src="images/odin-logo.svg" alt="odin-logo">
-        <p class="bold-text dashboard-username">cody-malcolm</p>
-        <p>Learn all the stuff!</p>
+        <div class="inner-dashboard">
+          <img class="lrg-img" src="images/odin-logo.svg" alt="odin-logo">
+          <p class="bold-text dashboard-username">cody-malcolm</p>
+          <p class="dashboard-text">Learn all the stuff!</p>
+        </div>
       </div>
       <div class="progress-container">
         <h2>Skills Progress</h2>
         <p>If you're new to web development, take the following courses in order.
         Otherwise feel free to start wherever interests you the most.</p>
-        <div class="progress-icon">
-          <h4 class="completion-indicator">50% complete</h4>
-          <img class="foundations-logo" src="images/foundations-logo.svg" alt="foundations-logo">
+        <div class="inner-progress">
+          <div class="progress-icon">
+            <h4 class="completion-indicator">50% complete</h4>
+            <img class="foundations-logo" src="images/foundations-logo.svg" alt="foundations-logo">
+          </div>
+          <h3>Foundations</h3>
+          <h4>32 lessons</h4>
+          <button type="button" name="Resume" id="continue-button">Resume</button>
         </div>
-        <h3>Foundations</h3>
-        <h4>32 lessons</h4>
-        <button type="button" name="Resume" id="continue-button">Resume</button>
       </div>
       <div class="">
         <h2>Project Submissions</h2>
