--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="logo">
         <img class="med-img" src="images/odin-logo.svg" alt="odin-logo">
         <span class="logo-text">The Odin Project</span>
-      </div>
-      <div class="header-spacer">
+        <div class="spacer">
 
+        </div>
       </div>
       <div class="menu">
         <a href="#" class="menu-link">My Path</a>
@@ -51,8 +51,10 @@
             <h4 class="completion-indicator">50% complete</h4>
             <img class="foundations-logo" src="images/foundations-logo.svg" alt="foundations-logo">
           </div>
-          <h3>Foundations</h3>
-          <h4>32 lessons</h4>
+          <div class="path-info-text">
+            <h3>Foundations</h3>
+            <h4>32 lessons</h4>
+          </div>
           <button type="button" name="Resume" id="continue-button">Resume</button>
         </div>
       </div>
