Complete media query styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <span class="menu-divider">|</span>
         <img class="sm-img menu-img" src="images/odin-logo.svg" alt="odin-logo">
       </div>
+      <div class="dropdown">
+        <i class="fas fa-bars"></i>
+      </div>
     </div>
     <div class="main">
       <div class="dashboard-container">
